--- a/force-app/main/default/pages/SummitEventsCancelReview.page
+++ b/force-app/main/default/pages/SummitEventsCancelReview.page
@@ -19,7 +19,7 @@ Created by Thaddaeus Dahlberg on 5/1/2018.
         <apex:define name="sectionNav"/>
         <apex:define name="body">
             <div class="slds-col slds-size_1-of-1 slds-p-vertical_x-small slds-p-vertical_xx-small">
-                <apex:messages />
+                <apex:messages/>
             </div>
             <apex:form id="SummitEventsRegistrationCancelReview" rendered="{!!eventOver && !eventNotFound}" styleClass="slds-grid slds-wrap">
                 <div class="slds-col slds-size_1-of-1 slds-p-vertical_x-small slds-p-vertical_xx-small">
@@ -27,7 +27,7 @@ Created by Thaddaeus Dahlberg on 5/1/2018.
                 </div>
                 <div class="slds-col slds-size_1-of-1 slds-p-vertical_x-small slds-p-vertical_xx-small">
                     <h2 class="slds-text-heading_large slds-p-vertical_xx-small">
-                        <apex:outputText value="{!evt.Event__r.Event_Cancel_Review_Title__c}" escape="false"></apex:outputText>
+                        <apex:outputText value="{!evt.Event__r.Event_Cancel_Review_Title__c}"></apex:outputText>
                     </h2>
                     <p class="slds-text-body slds-p-vertical_xx-small">
                         <apex:outputText value="{!evt.Event__r.Event_Cancel_Review_Description__c}" escape="false"></apex:outputText>
@@ -43,9 +43,11 @@ Created by Thaddaeus Dahlberg on 5/1/2018.
                     <ul class="slds-list_dotted">
                         <apex:repeat value="{!appt}" var="ap">
                             <li>
-                                <apex:outputText value="{!ap.Appointment_Title__c}" escape="false"></apex:outputText>
-                                <apex:outputText value="{!ap.Appointment_Category__c}" escape="false" rendered="{!IF(!ISBLANK(ap.Appointment_Category__c), true, false)}"></apex:outputText>
-                                <apex:outputText value="<br/><em>{!ap.Appointment_Type__c}</em>" escape="false"></apex:outputText>
+                                <apex:outputText value="{!ap.Appointment_Title__c}"></apex:outputText>
+                                <apex:outputText value="{!ap.Appointment_Category__c}" rendered="{!IF(!ISBLANK(ap.Appointment_Category__c), true, false)}"></apex:outputText>
+                                <br/><em>
+                                    <apex:outputText value="{!ap.Appointment_Type__c}"></apex:outputText>
+                                </em>
                             </li>
                         </apex:repeat>
                     </ul>
