--- a/force-app/main/default/pages/SummitEventsSubmit.page
+++ b/force-app/main/default/pages/SummitEventsSubmit.page
@@ -31,7 +31,7 @@ Created by Thaddaeus Dahlberg on 5/1/2018.
 
                     <div class="slds-col slds-size_1-of-1 slds-p-vertical_x-small slds-p-vertical_xx-small">
                         <h2 class="slds-text-heading_large slds-p-vertical_xx-small">
-                            <apex:outputText escape="false" value="{!eventPage.Event_Submit_Title__c}"/>
+                            <apex:outputText value="{!eventPage.Event_Submit_Title__c}"/>
                         </h2>
                     </div>
                     <!-- EVENT CLOSED MESSAGE -->
